[project]
name = "comfyui-booru-tagger"
description = "A ComfyUI extension allowing the interrogation of booru tags from images."
version = "1.0"
license = { file = "LICENSE" }
dependencies = ["onnxruntime"]

[project.urls]
Repository = "https://github.com/nestflow/ComfyUI-WD14-Tagger"

[tool.comfy]
PublisherId = "nestflow"
DisplayName = "ComfyUI-Booru-Tagger"
Icon = ""
