[project]
name = "comfyui-booru-tagger"
description = "A ComfyUI extension allowing the interrogation of booru tags from images."
version = "1.0"
license = { file = "LICENSE" }
dependencies = ["onnxruntime", "pandas"]

[project.urls]
Repository = "https://github.com/nestflow/ComfyUI-Booru-Tagger"

[tool.comfy]
PublisherId = "nestflow"
DisplayName = "ComfyUI-Booru-Tagger"
Icon = ""
